# Saddle

./: .gitignore  README.md
.github/workflows/: test.yml
backend/: deploy.py  pyproject.toml
backend/csrc/: Makefile  adam.c  adam.h  surfaces.c  surfaces.h  wasm_api.c
backend/saddle/: api.py  benchmark.py  c_adam.py  custom_surface.py  nn_landscape.py  optimisers.py  schedules.py  surfaces.py
backend/tests/: test_api.py  test_c_adam.py  test_custom_surface.py  test_nn_landscape.py  test_optimisers.py  test_schedules.py  test_surfaces.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BenchmarkPanel.tsx  Controls.tsx  ConvergencePlot.tsx  SurfacePlot.tsx
frontend/lib/: api.ts  wasm.ts
frontend/public/wasm/: saddle.js  saddle.wasm
