[project]
name = "saddle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jax>=0.5",
    "jaxlib>=0.5",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["saddle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
